# WinSystemCtl

./: .gitignore  README.md  WinSystemCtl.sln
WinSystemCtl/: App.xaml  App.xaml.cs  LanguageOptions.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  NativeMethods.txt  RelatedViewModel.cs  Settings.cs  TaskManager.cs  Utils.cs  WinSystemCtl.csproj  app.manifest
WinSystemCtl.Core/: Command.cs  IProcess.cs  ObservableDictionary.cs  ProcessWrapper.cs  Utils.cs  ViewModelBase.cs  WinSystemCtl.Core.csproj
WinSystemCtl.Core/Data/: EnvironmentVarPair.cs  SingleStep.cs  Task.cs
WinSystemCtl.Core/Execution/: Config.cs  ExecutionErrorEventArgs.cs  ExecutionErrorType.cs  Executor.cs  ProcessOutputEventArgs.cs  Stage.cs  StepEnterEventArgs.cs
WinSystemCtl.Core/Properties/: ExecutionError.Designer.cs  ExecutionError.resx  Executor.Designer.cs  Executor.resx
WinSystemCtl.Core/PseudoConsole/: PseudoConsoleApi.cs  PseudoConsoleCore.cs  PseudoConsolePipe.cs  PseudoConsoleProcess.cs
WinSystemCtl.PseudoConsoleCore/: .clang-format  CMakeLists.txt  CMakePresets.json
WinSystemCtl.PseudoConsoleCore/app/: main.cpp  readfile_ex.cpp  readfile_iocp.cpp
WinSystemCtl.PseudoConsoleCore/include/: IOCPWorker.hpp  Logger.hpp  OrderedConcurrentQueue.hpp  PseudoConsolePipe.hpp  TaskManager.hpp  Utils.hpp
WinSystemCtl.PseudoConsoleCore/lib/: libPseudoConsoleCore.cpp
WinSystemCtl.PseudoConsoleCore/src/: IOCPWorker.cpp  Logger.cpp  PseudoConsolePipe.cpp  TaskManager.cpp  Utils.cpp
WinSystemCtl/Converters/: BoolToAcceptCloseGlyphCtr.cs  CollectionPropertyMapCtr.cs  CollectionToStringCtr.cs  Converters.xaml  CountZeroToVisibilityCtr.cs  EnumEqualToBoolCtr.cs  EnumEqualToVisibilityCtr.cs  EnumToStringCtr.cs  StringToFileNameOrDefaultCtr.cs  TaskStateToCardBackgroundCtr.cs  TaskStateToInfoBadgeStyleCtr.cs  TaskStateToSeverityCtr.cs  TextBoxNewlineCtr.cs
WinSystemCtl/Data/: DependencyItem.cs  Enums.cs  NavigationMenuItem.cs  TaskGroup.cs  TaskInfo.cs  ToastInfoItem.cs
WinSystemCtl/Pages/: DashboardPage.xaml  (+15 more)
(+11 files in other folders)
